feat(core): implement core infrastructure and optimizations
- Add service worker and PWA manifest
- Implement A11y provider
- Add structured data utilities
- Setup Jest configuration
- Enhance security middleware
- Add skeleton loaders
- Optimize product detail page
- Implement CSRF protection

Fixes #8

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,8 +19,16 @@
       }
     ],
     "paths": {
-      "@/*": ["./*"]
+      "@/*": ["./*"],
+      "@components/*": ["components/*"],
+      "@lib/*": ["lib/*"],
+      "@hooks/*": ["hooks/*"],
+      "@utils/*": ["utils/*"],
+      "@types/*": ["types/*"],
+      "@services/*": ["services/*"],
+      "@contexts/*": ["contexts/*"]
     },
+    "baseUrl": ".",
     "noImplicitAny": true,
     "strictNullChecks": true,
     "strictFunctionTypes": true,
